implemented default values for methods with generics and fixed some issues with member refs